Fix settings menu being too tall for landscape phone displays

--- a/css/settings.scss
+++ b/css/settings.scss
@@ -4,6 +4,7 @@
 @use 'common' as *;
 
 #settings {
+    overflow-y: scroll;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -14,6 +15,7 @@
     user-select: none;
 
     &.hidden {
+        overflow-y: visible;
         display: block;
         width: 0;
         height: 0;
